generator client {
  provider        = "prisma-client-js"
  previewFeatures = ["fullTextSearch"]
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

model user {
  id       String @id @default(uuid())
  username String @unique @db.VarChar(255)
  password String @db.VarChar(255)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model container {
  id               String         @id @default(uuid())
  containerNo      String         @unique @db.VarChar(255)
  size             String         @db.VarChar(255)
  operatorId       String?        @db.VarChar(255)
  operator         operator?      @relation(fields: [operatorId], references: [id], onDelete: SetNull)
  manufacturerDate DateTime       @default(now())
  containerType    CONTAINER_TYPE @default(TWENTY_FEET)
  oneDayCharges    Float          @default(0)
  vessel           String?        @db.VarChar(255)
  voyage           String?        @db.VarChar(255)
  createdAt        DateTime       @default(now())
  updatedAt        DateTime       @updatedAt
  eir              eir[]
  yardLocation     yardLocation[]
}

model consignee {
  id            String @id @default(uuid())
  consigneeName String @unique @db.VarChar(255)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  eir       eir[]
}

model operator {
  id           String @id @default(uuid())
  operatorName String @unique @db.VarChar(255)
  credit       Float  @default(0)

  createdAt DateTime    @default(now())
  updatedAt DateTime    @updatedAt
  eir       eir[]
  container container[]
}

model shipper {
  id          String @id @default(uuid())
  shipperName String @unique @db.VarChar(255)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  eir       eir[]
}

enum EIR_STATUS {
  GATE_IN
  GATE_OFF
}

enum EIR_BILLING_STATUS {
  CHARGE
  LINE_BILL
}

enum CONTAINER_TYPE {
  TWENTY_FEET
  FOUTY_FEET
}

model eir {
  id                   String              @id @default(uuid())
  eirNo                String              @unique @db.VarChar(255)
  status               EIR_STATUS          @default(GATE_IN)
  containerId          String?             @db.VarChar(255)
  container            container?          @relation(fields: [containerId], references: [id], onDelete: SetNull)
  inDate               DateTime?           @default(now())
  outDate              DateTime?           @default(now())
  operatorId           String?             @db.VarChar(255)
  operator             operator?           @relation(fields: [operatorId], references: [id], onDelete: SetNull)
  consigneeId          String?             @db.VarChar(255)
  consignee            consignee?          @relation(fields: [consigneeId], references: [id], onDelete: SetNull)
  shipperId            String?             @db.VarChar(255)
  shipper              shipper?            @relation(fields: [shipperId], references: [id], onDelete: SetNull)
  vessel               String?             @db.VarChar(255)
  voyage               String?             @db.VarChar(255)
  grossWeight          Int              @default(0)
  tareWeight           Int              @default(0)
  netWeight            Int              @default(0)
  washingCharges       Float               @default(0)
  washingStatus        String?             @db.VarChar(255)
  liftOffCharges       Float               @default(0)
  liftOnCharges        Float               @default(0)
  gateInTotalCharges   Float               @default(0)
  gateOutTotalCharges  Float               @default(0)
  billingStatus        EIR_BILLING_STATUS  @default(CHARGE)
  gateInvehicleInfoId  String?             @unique @db.VarChar(255)
  gateInvehicleInfo    gateInvehicleInfo?  @relation(fields: [gateInvehicleInfoId], references: [id], onDelete: SetNull)
  gateOutvehicleInfoId String?             @unique @db.VarChar(255)
  gateOutvehicleInfo   gateOutvehicleInfo? @relation(fields: [gateOutvehicleInfoId], references: [id], onDelete: SetNull)
  remark               String?             @db.Text
  bookingNo            String?             @db.VarChar(255)
  grade                String?             @db.VarChar(255)
  standard             String?             @db.VarChar(255)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model gateInvehicleInfo {
  id         String @id @default(uuid())
  vehicleNo  String @db.VarChar(255)
  licenseNo  String @db.VarChar(255)
  driverName String @db.VarChar(255)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  eir       eir?
}

model gateOutvehicleInfo {
  id         String @id @default(uuid())
  vehicleNo  String @db.VarChar(255)
  licenseNo  String @db.VarChar(255)
  driverName String @db.VarChar(255)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  eir       eir?
}

model yard {
  id String @id @default(uuid())
  no String @unique @db.VarChar(255)

  createdAt    DateTime       @default(now())
  updatedAt    DateTime       @updatedAt
  yardLocation yardLocation[]
}

model yardLocation {
  id          String     @id @default(uuid())
  containerId String?    @db.VarChar(255)
  container   container? @relation(fields: [containerId], references: [id], onDelete: SetNull)
  yardId      String?    @db.VarChar(255)
  yard        yard?      @relation(fields: [yardId], references: [id], onDelete: SetNull)
  floor       Int        @default(0)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}
