//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table user {
  id String [pk]
  username String [unique, not null]
  password String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table container {
  id String [pk]
  containerNo String [unique, not null]
  size String [not null]
  operatorId String
  operator operator
  manufacturerDate DateTime [default: `now()`, not null]
  containerType CONTAINER_TYPE [not null, default: 'TWENTY_FEET']
  oneDayCharges Float [not null, default: 0]
  vessel String
  voyage String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  eir eir [not null]
  yardLocation yardLocation [not null]
}

Table consignee {
  id String [pk]
  consigneeName String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  eir eir [not null]
}

Table operator {
  id String [pk]
  operatorName String [unique, not null]
  credit Float [not null, default: 0]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  eir eir [not null]
  container container [not null]
}

Table shipper {
  id String [pk]
  shipperName String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  eir eir [not null]
}

Table eir {
  id String [pk]
  eirNo String [unique, not null]
  status EIR_STATUS [not null, default: 'GATE_IN']
  containerId String
  container container
  inDate DateTime [default: `now()`]
  outDate DateTime [default: `now()`]
  operatorId String
  operator operator
  consigneeId String
  consignee consignee
  shipperId String
  shipper shipper
  vessel String
  voyage String
  grossWeight Int [not null, default: 0]
  tareWeight Int [not null, default: 0]
  netWeight Int [not null, default: 0]
  washingCharges Float [not null, default: 0]
  washingStatus String
  liftOffCharges Float [not null, default: 0]
  liftOnCharges Float [not null, default: 0]
  gateInTotalCharges Float [not null, default: 0]
  gateOutTotalCharges Float [not null, default: 0]
  billingStatus EIR_BILLING_STATUS [not null, default: 'CHARGE']
  gateInvehicleInfoId String [unique]
  gateInvehicleInfo gateInvehicleInfo
  gateOutvehicleInfoId String [unique]
  gateOutvehicleInfo gateOutvehicleInfo
  remark String
  bookingNo String
  grade String
  standard String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table gateInvehicleInfo {
  id String [pk]
  vehicleNo String [not null]
  licenseNo String [not null]
  driverName String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  eir eir
}

Table gateOutvehicleInfo {
  id String [pk]
  vehicleNo String [not null]
  licenseNo String [not null]
  driverName String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  eir eir
}

Table yard {
  id String [pk]
  no String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  yardLocation yardLocation [not null]
}

Table yardLocation {
  id String [pk]
  containerId String
  container container
  yardId String
  yard yard
  floor Int [not null, default: 0]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Enum EIR_STATUS {
  GATE_IN
  GATE_OFF
}

Enum EIR_BILLING_STATUS {
  CHARGE
  LINE_BILL
}

Enum CONTAINER_TYPE {
  TWENTY_FEET
  FOUTY_FEET
}

Ref: container.operatorId > operator.id [delete: Set Null]

Ref: eir.containerId > container.id [delete: Set Null]

Ref: eir.operatorId > operator.id [delete: Set Null]

Ref: eir.consigneeId > consignee.id [delete: Set Null]

Ref: eir.shipperId > shipper.id [delete: Set Null]

Ref: eir.gateInvehicleInfoId - gateInvehicleInfo.id [delete: Set Null]

Ref: eir.gateOutvehicleInfoId - gateOutvehicleInfo.id [delete: Set Null]

Ref: yardLocation.containerId > container.id [delete: Set Null]

Ref: yardLocation.yardId > yard.id [delete: Set Null]